--- a/Project2final.html
+++ b/Project2final.html
@@ -171,21 +171,21 @@
         <section class="showcase">
             <div class="container-fluid p-0">
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(./assets/img/Don.jpg )"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(./assets/Don.jpg  )"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Mission:</h2>
                         <p class="lead mb-0">"To dream the impossible dream. That is the quest" -Don Quixote: I figured this quote was fitting sine I too have felt at moments like I was chasing windmills when trying to learn this stuff</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
+                    <div class="col-lg-6 text-white showcase-img" style="background-image: url(./assets/bg-showcase-2.jpg)"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Built</h2>
                         <p class="lead mb-0">Vietnamese cold brews. That was the trick. Staying up almost turned me into a Sith but I remembered that Jedis need patience (except Anakin. He was kinda doomed from the start)</p>
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(./assets/bg-showcase-3.jpg)"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Easy to use</h2>
                         <p class="lead mb-0">Wrote this with a goal of making a simple page that is easy to read and navigate. Used bootstrap for the outline and added some basic HTML and CSS </p>
@@ -200,7 +200,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="./assets/img/Darth.jpg" alt="Vader" />
+                            <img class="img-fluid rounded-circle mb-3" src="./assets/Darth.jpg" alt="Vader" />
                             <h3>A loving father</h3>
                             <h6>
                             <p class="font-weight-light mb-0">"This is fantastic! If I had known about this site before, I might not have turned to the darkside" -Anakin</p>
@@ -209,7 +209,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="./assets/img/Paul2.jpg" alt="Muaddib" />
+                            <img class="img-fluid rounded-circle mb-3" src="./assets/Paul2.jpg" alt="Muaddib" />
                             <h3>An only child</h3>
                             <h6>
                             <p class="font-weight-light mb-0">"I used this search engine to help me find the Fremen. Without it, Arakis would still be in the hands of the Harkonnen" -Paul</p>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/Sauron-2.jpg" alt="Balrog" />
+                            <img class="img-fluid rounded-circle mb-3" src="./assets/two_towers_4k_eye_of_sauron.jpg" alt="Balrog" />
                             <h3>Jewelry designer</h3>
                             <h6>
                             <p class="font-weight-light mb-0">"Ash nazg durbatulûk, ash nazg gimbatul, ash nazg thrakatulûk agh burzum-ishi krimpatul" -Sauron</p>
