--- a/Project2final.html
+++ b/Project2final.html
@@ -277,7 +277,7 @@
                             <li class="list-inline-item"><a href="#!">Contact</a></li>
                             <li class="list-inline-item">⋅</li>
                             <li class="list-inline-item"><a href="#!"></a>
-                                <a href="https://www.github.com/dare.daryl"
+                                <a href="https://github.com/DareDaryl"
                                 class="footer__social--link link__hover-effect link__hover-effect--white" >GitHub
                               </a>
             </li>
